[tool.poetry]
name = "pixelartgen"
version = "0.0.0"
description = "A pixel art generator"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.27.2"
torch = "^2.3.0"
transformers = "^4.41.0"
peft = "^0.11.1"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
